--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Fullstack Bakery</title>
+    <link rel="stylesheet" href="bakery.css" />
   </head>
   <body>
     <header>
